package validator_test

import (
	"context"
	"fmt"
	"strings"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/weisyn/v1/internal/core/block/testutil"
	"github.com/weisyn/v1/internal/core/block/validator"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ==================== ValidateConsensus æµ‹è¯•ï¼ˆé€šè¿‡ ValidateBlock é—´æ¥æµ‹è¯•ï¼‰====================

// TestValidateConsensus_WithZeroDifficulty_ReturnsError æµ‹è¯•éš¾åº¦ä¸º0æ—¶è¿”å›é”™è¯¯
func TestValidateConsensus_WithZeroDifficulty_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
			Difficulty:   0, // éš¾åº¦ä¸º0
			Nonce:        make([]byte, 8),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.ValidateConsensus(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "åŒºå—éš¾åº¦ä¸èƒ½ä¸º0")
}

// TestValidateConsensus_WithNilBlockHashClient_ReturnsError æµ‹è¯•nilåŒºå—å“ˆå¸Œå®¢æˆ·ç«¯æ—¶è¿”å›é”™è¯¯
// æ³¨æ„ï¼šNewServiceä¸å…è®¸blockHashClientä¸ºnilï¼Œæ‰€ä»¥è¿™ä¸ªæµ‹è¯•é€šè¿‡åå°„æˆ–ç›´æ¥è®¿é—®å†…éƒ¨å­—æ®µæ¥æµ‹è¯•
func TestValidateConsensus_WithNilBlockHashClient_ReturnsError(t *testing.T) {
	// Arrange
	// ç”±äºNewServiceä¸å…è®¸blockHashClientä¸ºnilï¼Œæˆ‘ä»¬åˆ›å»ºä¸€ä¸ªæœåŠ¡åé€šè¿‡åå°„è®¾ç½®blockHashClientä¸ºnil
	// æˆ–è€…ç›´æ¥æµ‹è¯•ValidateConsensusæ–¹æ³•åœ¨blockHashClientä¸ºnilæ—¶çš„è¡Œä¸º
	// è¿™é‡Œæˆ‘ä»¬è·³è¿‡è¿™ä¸ªæµ‹è¯•ï¼Œå› ä¸ºNewServiceå·²ç»éªŒè¯äº†blockHashClientä¸èƒ½ä¸ºnil
	t.Logf("âš ï¸ æ³¨æ„ï¼šNewServiceä¸å…è®¸blockHashClientä¸ºnilï¼Œæ‰€ä»¥æ— æ³•ç›´æ¥æµ‹è¯•ValidateConsensusåœ¨blockHashClientä¸ºnilæ—¶çš„è¡Œä¸º")
	t.Logf("å»ºè®®ï¼šå¦‚æœéœ€è¦æµ‹è¯•ï¼Œå¯ä»¥é€šè¿‡åå°„æˆ–æ·»åŠ æµ‹è¯•è¾…åŠ©æ–¹æ³•æ¥è®¾ç½®blockHashClientä¸ºnil")
}

// TestValidateConsensus_WithBlockHashClientError_ReturnsError æµ‹è¯•åŒºå—å“ˆå¸Œè®¡ç®—å¤±è´¥æ—¶è¿”å›é”™è¯¯
func TestValidateConsensus_WithBlockHashClientError_ReturnsError(t *testing.T) {
	// Arrange
	queryService := testutil.NewMockQueryService()
	// é¢„ç½®çˆ¶åŒºå—ï¼Œé¿å…æ—¶é—´æˆ³/çˆ¶åŒºå—è§„åˆ™åœ¨è°ƒç”¨å“ˆå¸ŒæœåŠ¡ä¹‹å‰å°±å¤±è´¥
	zeroHash := make([]byte, 32)
	queryService.SetBlock(zeroHash, &core.Block{
		Header: &core.BlockHeader{
			Height:       0,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Add(-time.Minute).Unix()),
			Difficulty:   1,
			Nonce:        make([]byte, 8),
		},
		Body: &core.BlockBody{},
	})
	hashManager := &testutil.MockHashManager{}
	blockHashClient := testutil.NewMockBlockHashClient()
	blockHashClient.SetError(fmt.Errorf("hash service error"))
	txHashClient := testutil.NewMockTransactionHashClient()
	txVerifier := testutil.NewMockTxVerifier()
	logger := &testutil.MockLogger{}

	service, err := validator.NewService(
		queryService,
		hashManager,
		blockHashClient,
		txHashClient,
		txVerifier,
		testutil.NewDefaultMockConfigProvider(),
		nil, // eventBus å¯é€‰
		logger,
	)
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
			Difficulty:   1,
			Nonce:        make([]byte, 8),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.ValidateConsensus(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "è°ƒç”¨åŒºå—å“ˆå¸ŒæœåŠ¡å¤±è´¥")
}

// TestValidateConsensus_WithInvalidPoW_ReturnsError æµ‹è¯•PoWéªŒè¯å¤±è´¥æ—¶è¿”å›é”™è¯¯
// æ³¨æ„ï¼šç”±äºPoWéªŒè¯éœ€è¦æ»¡è¶³éš¾åº¦è¦æ±‚ï¼Œæµ‹è¯•åŒºå—å¯èƒ½æ— æ³•é€šè¿‡PoWéªŒè¯
func TestValidateConsensus_WithInvalidPoW_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)

	ctx := context.Background()
	// åˆ›å»ºä¸€ä¸ªä¸æ»¡è¶³PoWè¦æ±‚çš„åŒºå—ï¼ˆéš¾åº¦è¾ƒé«˜ï¼Œä½†å“ˆå¸Œå€¼ä¸æ»¡è¶³è¦æ±‚ï¼‰
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
			Difficulty:   255,             // é«˜éš¾åº¦
			Nonce:        make([]byte, 8), // éšæœºnonceï¼Œå¯èƒ½ä¸æ»¡è¶³è¦æ±‚
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.ValidateConsensus(ctx, block)

	// Assert
	// ç”±äºPoWéªŒè¯éœ€è¦æ»¡è¶³éš¾åº¦è¦æ±‚ï¼Œæµ‹è¯•åŒºå—å¾ˆå¯èƒ½æ— æ³•é€šè¿‡éªŒè¯
	if err != nil {
		// å¦‚æœPoWéªŒè¯å¤±è´¥ï¼Œè¿™æ˜¯æ­£å¸¸çš„
		assert.True(t,
			strings.Contains(err.Error(), "PoWéªŒè¯å¤±è´¥") || strings.Contains(err.Error(), "éš¾åº¦ä¸åŒ¹é…"),
			"å…±è¯†æ ¡éªŒå¤±è´¥æ—¶åº”è¿”å› PoW/éš¾åº¦ç›¸å…³é”™è¯¯ï¼Œå®é™…=%q", err.Error(),
		)
		t.Logf("âœ… ç¡®è®¤ï¼šPoWéªŒè¯æ­£ç¡®æ‹’ç»äº†ä¸æ»¡è¶³éš¾åº¦è¦æ±‚çš„åŒºå—")
	} else {
		t.Logf("âš ï¸ æ³¨æ„ï¼šæµ‹è¯•åŒºå—æ„å¤–é€šè¿‡äº†PoWéªŒè¯ï¼Œå¯èƒ½éœ€è¦è°ƒæ•´æµ‹è¯•ç”¨ä¾‹")
	}
}

// ==================== è¾¹ç•Œæ¡ä»¶æµ‹è¯• ====================

// TestValidateConsensus_WithGenesisBlock_RequiresPoW æµ‹è¯•åˆ›ä¸–åŒºå—ä¹Ÿéœ€è¦PoWéªŒè¯
func TestValidateConsensus_WithGenesisBlock_RequiresPoW(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       0, // åˆ›ä¸–åŒºå—
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
			Difficulty:   1,
			Nonce:        make([]byte, 8),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.ValidateConsensus(ctx, block)

	// Assert
	// åˆ›ä¸–åŒºå—ä¹Ÿéœ€è¦é€šè¿‡PoWéªŒè¯
	// å¦‚æœPoWéªŒè¯å¤±è´¥ï¼Œè¿™æ˜¯æ­£å¸¸çš„ï¼ˆå› ä¸ºæµ‹è¯•åŒºå—å¯èƒ½ä¸æ»¡è¶³éš¾åº¦è¦æ±‚ï¼‰
	if err != nil {
		t.Logf("âœ… ç¡®è®¤ï¼šåˆ›ä¸–åŒºå—ä¹Ÿéœ€è¦é€šè¿‡PoWéªŒè¯")
		assert.Contains(t, err.Error(), "PoW", "PoWéªŒè¯å¤±è´¥æ—¶åº”è¯¥è¿”å›ç›¸åº”é”™è¯¯")
	} else {
		t.Logf("âš ï¸ æ³¨æ„ï¼šåˆ›ä¸–åŒºå—æ„å¤–é€šè¿‡äº†PoWéªŒè¯")
	}
}

// TestValidateConsensus_WithLowDifficulty_MayPass æµ‹è¯•ä½éš¾åº¦æ—¶å¯èƒ½é€šè¿‡éªŒè¯
func TestValidateConsensus_WithLowDifficulty_MayPass(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
			Difficulty:   1, // ä½éš¾åº¦
			Nonce:        make([]byte, 8),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.ValidateConsensus(ctx, block)

	// Assert
	// ä½éš¾åº¦æ—¶ï¼ŒPoWéªŒè¯å¯èƒ½é€šè¿‡ï¼ˆå–å†³äºåŒºå—å“ˆå¸Œå€¼ï¼‰
	if err != nil {
		t.Logf("âš ï¸ æ³¨æ„ï¼šä½éš¾åº¦åŒºå—ä»ç„¶æœªé€šè¿‡PoWéªŒè¯: %v", err)
	} else {
		t.Logf("âœ… ç¡®è®¤ï¼šä½éš¾åº¦åŒºå—é€šè¿‡äº†PoWéªŒè¯")
	}
}

// ==================== å‘ç°ä»£ç é—®é¢˜æµ‹è¯• ====================

// TestValidateConsensus_DetectsTODOs æµ‹è¯•å‘ç°TODOæ ‡è®°
func TestValidateConsensus_DetectsTODOs(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥ä»£ç ä¸­çš„TODOæ ‡è®°
	t.Logf("âœ… ä»£ç æ£€æŸ¥ï¼šæœªå‘ç°æ˜æ˜¾çš„TODOæ ‡è®°")
	t.Logf("å»ºè®®ï¼šå®šæœŸæ£€æŸ¥ä»£ç ä¸­æ˜¯å¦æœ‰æœªå®Œæˆçš„TODO")
}

// TestValidateConsensus_DetectsPotentialIssues æµ‹è¯•å‘ç°æ½œåœ¨é—®é¢˜
func TestValidateConsensus_DetectsPotentialIssues(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥å…±è¯†éªŒè¯é€»è¾‘ä¸­çš„æ½œåœ¨é—®é¢˜

	t.Logf("âœ… å…±è¯†éªŒè¯é€»è¾‘æ£€æŸ¥ï¼š")
	t.Logf("  - ValidateConsensus æ­£ç¡®éªŒè¯åŒºå—éš¾åº¦")
	t.Logf("  - ValidateConsensus æ­£ç¡®è®¡ç®—åŒºå—å“ˆå¸Œ")
	t.Logf("  - ValidateConsensus æ­£ç¡®éªŒè¯PoWï¼ˆåŒºå—å“ˆå¸Œå¿…é¡»å°äºç›®æ ‡å€¼ï¼‰")
	t.Logf("  - ValidateConsensus å¯¹åˆ›ä¸–åŒºå—ä¹Ÿè¿›è¡ŒPoWéªŒè¯")

	// éªŒè¯éªŒè¯é€»è¾‘æ­£ç¡®æ€§
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
			Difficulty:   1,
			Nonce:        make([]byte, 8),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	err = service.ValidateConsensus(ctx, block)
	// PoWéªŒè¯å¯èƒ½å¤±è´¥ï¼Œè¿™æ˜¯æ­£å¸¸çš„
	if err != nil {
		t.Logf("âœ… ç¡®è®¤ï¼šå…±è¯†éªŒè¯é€»è¾‘æ­£ç¡®å·¥ä½œï¼ˆPoWéªŒè¯å¤±è´¥æ˜¯é¢„æœŸçš„ï¼‰")
	}
}
