// Package validator å®ç°åŒºå—éªŒè¯æœåŠ¡
package validator

import (
	"context"
	"fmt"
	"time"

	core "github.com/weisyn/v1/pb/blockchain/block"
)

// validateStructure éªŒè¯åŒºå—ç»“æ„
//
// ğŸ¯ **ç»“æ„éªŒè¯æ£€æŸ¥é¡¹**ï¼š
// 1. åŒºå—å¤´å®Œæ•´æ€§
// 2. åŒºå—ä½“å®Œæ•´æ€§
// 3. å­—æ®µæœ‰æ•ˆæ€§
// 4. åŒºå—å¤§å°é™åˆ¶
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - block: å¾…éªŒè¯åŒºå—
//
// è¿”å›ï¼š
//   - error: éªŒè¯é”™è¯¯ï¼ˆnilè¡¨ç¤ºé€šè¿‡ï¼‰
func (s *Service) validateStructure(ctx context.Context, block *core.Block) error {
	// 1. åŒºå—å¤´æ£€æŸ¥
	if block.Header == nil {
		return fmt.Errorf("åŒºå—å¤´ä¸ºç©º")
	}

	// 2. åŒºå—ä½“æ£€æŸ¥
	if block.Body == nil {
		return fmt.Errorf("åŒºå—ä½“ä¸ºç©º")
	}

	// 3. æ£€æŸ¥äº¤æ˜“åˆ—è¡¨
	if len(block.Body.Transactions) == 0 {
		return fmt.Errorf("åŒºå—äº¤æ˜“åˆ—è¡¨ä¸ºç©º")
	}

	// 4. åŒºå—å“ˆå¸ŒéªŒè¯ï¼ˆé€šè¿‡è®¡ç®—éªŒè¯ï¼Œä¸æ£€æŸ¥å­—æ®µï¼‰
	// æ³¨æ„ï¼šåŒºå—å“ˆå¸Œé€šè¿‡è®¡ç®—Headerå¾—å‡ºï¼ŒHeaderä¸­ä¸å­˜å‚¨Hashå­—æ®µ

	// 5. æ£€æŸ¥çˆ¶åŒºå—å“ˆå¸Œï¼ˆéåˆ›ä¸–åŒºå—ï¼‰
	if block.Header.Height > 0 && len(block.Header.PreviousHash) != 32 {
		return fmt.Errorf("çˆ¶åŒºå—å“ˆå¸Œé•¿åº¦æ— æ•ˆ: %d", len(block.Header.PreviousHash))
	}

	// 6. æ£€æŸ¥Merkleæ ¹
	if len(block.Header.MerkleRoot) != 32 {
		return fmt.Errorf("Merkleæ ¹é•¿åº¦æ— æ•ˆ: %d", len(block.Header.MerkleRoot))
	}

	// 7. æ£€æŸ¥çŠ¶æ€æ ¹
	if len(block.Header.StateRoot) != 32 {
		return fmt.Errorf("çŠ¶æ€æ ¹é•¿åº¦æ— æ•ˆ: %d", len(block.Header.StateRoot))
	}

	// 8. æ£€æŸ¥æ—¶é—´æˆ³ï¼ˆä¸èƒ½æ˜¯æœªæ¥æ—¶é—´ï¼ŒP3-9ï¼šæ—¶é—´æˆ³éªŒè¯ï¼‰
	// è·å–å½“å‰æ—¶é—´æˆ³
	currentTime := time.Now().Unix()
	blockTime := int64(block.Header.Timestamp)

	// å…è®¸çš„æ—¶é—´åå·®ï¼šæœªæ¥2å°æ—¶ï¼ˆè€ƒè™‘æ—¶é’Ÿåå·®å’Œç½‘ç»œå»¶è¿Ÿï¼‰
	maxFutureTime := currentTime + 7200 // 2å°æ—¶ = 7200ç§’

	if blockTime > maxFutureTime {
		return fmt.Errorf("åŒºå—æ—¶é—´æˆ³æ˜¯æœªæ¥æ—¶é—´: åŒºå—æ—¶é—´=%d, å½“å‰æ—¶é—´=%d, å…è®¸åå·®=2å°æ—¶", blockTime, currentTime)
	}

	// æ£€æŸ¥æ—¶é—´æˆ³æ˜¯å¦åˆç†
	if block.Header.Height == 0 {
		// åˆ›ä¸–åŒºå—ï¼šåªéªŒè¯æ—¶é—´æˆ³ä¸ä¸º0ï¼Œæ—¶é—´æˆ³å€¼ç”±é…ç½®æ–‡ä»¶å†³å®š
		// æ³¨æ„ï¼šåˆ›ä¸–åŒºå—æ—¶é—´æˆ³å¿…é¡»åœ¨é…ç½®æ–‡ä»¶ä¸­æ˜¾å¼æŒ‡å®šï¼Œä¸èƒ½ä½¿ç”¨é»˜è®¤å€¼
		if blockTime == 0 {
			return fmt.Errorf("åˆ›ä¸–åŒºå—æ—¶é—´æˆ³ä¸èƒ½ä¸º0ï¼Œå¿…é¡»åœ¨é…ç½®æ–‡ä»¶ä¸­æ˜¾å¼æŒ‡å®š")
		}
		// ä¸éªŒè¯æ—¶é—´æˆ³çš„å…·ä½“å€¼ï¼Œå› ä¸ºä¸åŒç½‘ç»œå¯èƒ½æœ‰ä¸åŒçš„åˆ›ä¸–æ—¶é—´
	} else {
		// éåˆ›ä¸–åŒºå—ï¼šéªŒè¯æ—¶é—´æˆ³ä¸èƒ½æ—©äºåˆ›ä¸–åŒºå—æ—¶é—´
		// é€šè¿‡æŸ¥è¯¢é“¾çŠ¶æ€è·å–åˆ›ä¸–åŒºå—æ—¶é—´æˆ³
		genesisBlock, err := s.queryService.GetBlockByHeight(ctx, 0)
		if err != nil {
			return fmt.Errorf("æ— æ³•è·å–åˆ›ä¸–åŒºå—ä»¥éªŒè¯æ—¶é—´æˆ³: %w", err)
		}
		if genesisBlock == nil || genesisBlock.Header == nil {
			return fmt.Errorf("åˆ›ä¸–åŒºå—ä¸å­˜åœ¨æˆ–æ— æ•ˆ")
		}
		genesisTime := int64(genesisBlock.Header.Timestamp)
		if blockTime < genesisTime {
			return fmt.Errorf("åŒºå—æ—¶é—´æˆ³æ—©äºåˆ›ä¸–æ—¶é—´: %d < %d", blockTime, genesisTime)
		}
	}

	// 9. æ£€æŸ¥Coinbaseäº¤æ˜“åœ¨é¦–ä½
	firstTx := block.Body.Transactions[0]
	if len(firstTx.Inputs) != 0 {
		return fmt.Errorf("é¦–ä¸ªäº¤æ˜“åº”è¯¥æ˜¯Coinbaseäº¤æ˜“ï¼ˆæ²¡æœ‰è¾“å…¥ï¼‰")
	}

	return nil
}
