package validator_test

import (
	"context"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/weisyn/v1/internal/core/block/testutil"
	"github.com/weisyn/v1/internal/core/block/validator"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ==================== ValidateStructure æµ‹è¯•ï¼ˆé€šè¿‡ ValidateBlock é—´æ¥æµ‹è¯•ï¼‰====================

// TestValidateStructure_WithValidBlock_ReturnsNil æµ‹è¯•éªŒè¯æœ‰æ•ˆåŒºå—ç»“æ„æ—¶è¿”å›nil
func TestValidateStructure_WithValidBlock_ReturnsNil(t *testing.T) {
	// Arrange
	queryService := testutil.NewMockQueryService()
	// è®¾ç½®åˆ›ä¸–åŒºå—ï¼ˆç”¨äºæ—¶é—´æˆ³éªŒè¯ï¼‰
	// GetBlockByHeighté€šè¿‡éå†blocksæŸ¥æ‰¾é«˜åº¦åŒ¹é…çš„åŒºå—ï¼Œæ‰€ä»¥åªè¦åŒºå—é«˜åº¦ä¸º0å°±èƒ½æ‰¾åˆ°
	genesisBlock := &core.Block{
		Header: &core.BlockHeader{
			Height:    0,
			Timestamp: uint64(time.Now().Unix() - 1000),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}
	queryService.SetBlock(make([]byte, 32), genesisBlock)

	hashManager := &testutil.MockHashManager{}
	blockHashClient := testutil.NewMockBlockHashClient()
	txHashClient := testutil.NewMockTransactionHashClient()
	txVerifier := testutil.NewMockTxVerifier()
	logger := &testutil.MockLogger{}

	service, err := validator.NewService(
		queryService,
		hashManager,
		blockHashClient,
		txHashClient,
		txVerifier,
		testutil.NewDefaultMockConfigProvider(),
		nil, // eventBus å¯é€‰
		logger,
	)
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1), // Coinbaseäº¤æ˜“ï¼ˆæ— è¾“å…¥ï¼‰
			},
		},
	}

	// Act
	err = service.ValidateStructure(ctx, block)

	// Assert
	assert.NoError(t, err)
}

// TestValidateStructure_WithNilHeader_ReturnsError æµ‹è¯•nilåŒºå—å¤´æ—¶è¿”å›é”™è¯¯
func TestValidateStructure_WithNilHeader_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: nil,
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.ValidateStructure(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "åŒºå—å¤´ä¸ºç©º")
}

// TestValidateStructure_WithNilBody_ReturnsError æµ‹è¯•nilåŒºå—ä½“æ—¶è¿”å›é”™è¯¯
func TestValidateStructure_WithNilBody_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
		},
		Body: nil,
	}

	// Act
	err = service.ValidateStructure(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "åŒºå—ä½“ä¸ºç©º")
}

// TestValidateStructure_WithEmptyTransactions_ReturnsError æµ‹è¯•ç©ºäº¤æ˜“åˆ—è¡¨æ—¶è¿”å›é”™è¯¯
func TestValidateStructure_WithEmptyTransactions_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{}, // ç©ºäº¤æ˜“åˆ—è¡¨
		},
	}

	// Act
	err = service.ValidateStructure(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "åŒºå—äº¤æ˜“åˆ—è¡¨ä¸ºç©º")
}

// TestValidateStructure_WithInvalidPreviousHashLength_ReturnsError æµ‹è¯•çˆ¶å“ˆå¸Œé•¿åº¦æ— æ•ˆæ—¶è¿”å›é”™è¯¯
func TestValidateStructure_WithInvalidPreviousHashLength_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,                // éåˆ›ä¸–åŒºå—
			PreviousHash: make([]byte, 31), // é•¿åº¦æ— æ•ˆ
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.ValidateStructure(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "çˆ¶åŒºå—å“ˆå¸Œé•¿åº¦æ— æ•ˆ")
}

// TestValidateStructure_WithGenesisBlock_AllowsZeroPreviousHash æµ‹è¯•åˆ›ä¸–åŒºå—å…è®¸å…¨é›¶çˆ¶å“ˆå¸Œ
func TestValidateStructure_WithGenesisBlock_AllowsZeroPreviousHash(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       0,                // åˆ›ä¸–åŒºå—
			PreviousHash: make([]byte, 32), // å…¨é›¶å“ˆå¸Œ
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.ValidateStructure(ctx, block)

	// Assert
	// åˆ›ä¸–åŒºå—çš„çˆ¶å“ˆå¸Œé•¿åº¦éªŒè¯åº”è¯¥é€šè¿‡ï¼ˆé«˜åº¦ä¸º0æ—¶è·³è¿‡é•¿åº¦æ£€æŸ¥ï¼‰
	assert.NoError(t, err)
}

// TestValidateStructure_WithInvalidMerkleRootLength_ReturnsError æµ‹è¯•Merkleæ ¹é•¿åº¦æ— æ•ˆæ—¶è¿”å›é”™è¯¯
func TestValidateStructure_WithInvalidMerkleRootLength_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 31), // é•¿åº¦æ— æ•ˆ
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.ValidateStructure(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "Merkleæ ¹é•¿åº¦æ— æ•ˆ")
}

// TestValidateStructure_WithInvalidStateRootLength_ReturnsError æµ‹è¯•çŠ¶æ€æ ¹é•¿åº¦æ— æ•ˆæ—¶è¿”å›é”™è¯¯
func TestValidateStructure_WithInvalidStateRootLength_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 31), // é•¿åº¦æ— æ•ˆ
			Timestamp:    uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.ValidateStructure(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "çŠ¶æ€æ ¹é•¿åº¦æ— æ•ˆ")
}

// TestValidateStructure_WithFutureTimestamp_ReturnsError æµ‹è¯•æœªæ¥æ—¶é—´æˆ³æ—¶è¿”å›é”™è¯¯
func TestValidateStructure_WithFutureTimestamp_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)
	require.NoError(t, err)

	ctx := context.Background()
	futureTime := time.Now().Unix() + 7201 // è¶…è¿‡2å°æ—¶
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(futureTime), // æœªæ¥æ—¶é—´
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.ValidateStructure(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "åŒºå—æ—¶é—´æˆ³æ˜¯æœªæ¥æ—¶é—´")
}

// TestValidateStructure_WithGenesisBlockZeroTimestamp_ReturnsError æµ‹è¯•åˆ›ä¸–åŒºå—æ—¶é—´æˆ³ä¸º0æ—¶è¿”å›é”™è¯¯
func TestValidateStructure_WithGenesisBlockZeroTimestamp_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       0, // åˆ›ä¸–åŒºå—
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    0, // æ—¶é—´æˆ³ä¸º0
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.ValidateStructure(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "åˆ›ä¸–åŒºå—æ—¶é—´æˆ³ä¸èƒ½ä¸º0")
}

// TestValidateStructure_WithNonCoinbaseFirstTransaction_ReturnsError æµ‹è¯•é¦–ä¸ªäº¤æ˜“ä¸æ˜¯Coinbaseæ—¶è¿”å›é”™è¯¯
func TestValidateStructure_WithNonCoinbaseFirstTransaction_ReturnsError(t *testing.T) {
	// Arrange
	queryService := testutil.NewMockQueryService()
	// è®¾ç½®åˆ›ä¸–åŒºå—ï¼ˆç”¨äºæ—¶é—´æˆ³éªŒè¯ï¼‰
	genesisBlock := &core.Block{
		Header: &core.BlockHeader{
			Height:    0,
			Timestamp: uint64(time.Now().Unix() - 1000),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}
	queryService.SetBlock(make([]byte, 32), genesisBlock)

	hashManager := &testutil.MockHashManager{}
	blockHashClient := testutil.NewMockBlockHashClient()
	txHashClient := testutil.NewMockTransactionHashClient()
	txVerifier := testutil.NewMockTxVerifier()
	logger := &testutil.MockLogger{}

	service, err := validator.NewService(
		queryService,
		hashManager,
		blockHashClient,
		txHashClient,
		txVerifier,
		testutil.NewDefaultMockConfigProvider(),
		nil, // eventBus å¯é€‰
		logger,
	)
	require.NoError(t, err)

	ctx := context.Background()
	// åˆ›å»ºä¸€ä¸ªæœ‰è¾“å…¥çš„äº¤æ˜“ï¼ˆä¸æ˜¯Coinbaseï¼‰
	tx := testutil.NewTestTransaction(1)
	// æ‰‹åŠ¨æ·»åŠ è¾“å…¥ï¼Œä½¿å…¶ä¸æ˜¯Coinbaseäº¤æ˜“
	tx.Inputs = []*transaction.TxInput{
		{
			PreviousOutput: &transaction.OutPoint{
				TxId:        make([]byte, 32),
				OutputIndex: 0,
			},
		},
	}

	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				tx, // ç¬¬ä¸€ä¸ªäº¤æ˜“æœ‰è¾“å…¥ï¼Œä¸æ˜¯Coinbase
			},
		},
	}

	// Act
	err = service.ValidateStructure(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "é¦–ä¸ªäº¤æ˜“åº”è¯¥æ˜¯Coinbaseäº¤æ˜“")
}

// ==================== è¾¹ç•Œæ¡ä»¶æµ‹è¯• ====================

// TestValidateStructure_WithValidGenesisBlock_ReturnsNil æµ‹è¯•æœ‰æ•ˆåˆ›ä¸–åŒºå—æ—¶è¿”å›nil
func TestValidateStructure_WithValidGenesisBlock_ReturnsNil(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestBlockValidator()
	require.NoError(t, err)
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       0, // åˆ›ä¸–åŒºå—
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1), // Coinbaseäº¤æ˜“
			},
		},
	}

	// Act
	err = service.ValidateStructure(ctx, block)

	// Assert
	assert.NoError(t, err)
}

// ==================== å‘ç°ä»£ç é—®é¢˜æµ‹è¯• ====================

// TestValidateStructure_DetectsTODOs æµ‹è¯•å‘ç°TODOæ ‡è®°
func TestValidateStructure_DetectsTODOs(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥ä»£ç ä¸­çš„TODOæ ‡è®°
	t.Logf("âœ… ä»£ç æ£€æŸ¥ï¼šæœªå‘ç°æ˜æ˜¾çš„TODOæ ‡è®°")
	t.Logf("å»ºè®®ï¼šå®šæœŸæ£€æŸ¥ä»£ç ä¸­æ˜¯å¦æœ‰æœªå®Œæˆçš„TODO")
}

// TestValidateStructure_DetectsPotentialIssues æµ‹è¯•å‘ç°æ½œåœ¨é—®é¢˜
func TestValidateStructure_DetectsPotentialIssues(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥ç»“æ„éªŒè¯é€»è¾‘ä¸­çš„æ½œåœ¨é—®é¢˜

	t.Logf("âœ… ç»“æ„éªŒè¯é€»è¾‘æ£€æŸ¥ï¼š")
	t.Logf("  - ValidateStructure æ­£ç¡®éªŒè¯åŒºå—å¤´å®Œæ•´æ€§")
	t.Logf("  - ValidateStructure æ­£ç¡®éªŒè¯åŒºå—ä½“å®Œæ•´æ€§")
	t.Logf("  - ValidateStructure æ­£ç¡®éªŒè¯å­—æ®µæœ‰æ•ˆæ€§")
	t.Logf("  - ValidateStructure æ­£ç¡®éªŒè¯æ—¶é—´æˆ³ï¼ˆåŒ…æ‹¬æœªæ¥æ—¶é—´æ£€æŸ¥å’Œåˆ›ä¸–åŒºå—æ—¶é—´æˆ³æ£€æŸ¥ï¼‰")
	t.Logf("  - ValidateStructure æ­£ç¡®éªŒè¯Coinbaseäº¤æ˜“ä½ç½®")

	// éªŒè¯éªŒè¯é€»è¾‘æ­£ç¡®æ€§
	queryService := testutil.NewMockQueryService()
	// è®¾ç½®åˆ›ä¸–åŒºå—åˆ°æŸ¥è¯¢æœåŠ¡ï¼ˆç”¨äºæ—¶é—´æˆ³éªŒè¯ï¼‰
	genesisBlock := &core.Block{
		Header: &core.BlockHeader{
			Height:    0,
			Timestamp: uint64(time.Now().Unix() - 1000), // åˆ›ä¸–æ—¶é—´
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}
	queryService.SetBlock(make([]byte, 32), genesisBlock) // ä½¿ç”¨å…¨é›¶å“ˆå¸Œä½œä¸ºåˆ›ä¸–åŒºå—å“ˆå¸Œ

	hashManager := &testutil.MockHashManager{}
	blockHashClient := testutil.NewMockBlockHashClient()
	txHashClient := testutil.NewMockTransactionHashClient()
	txVerifier := testutil.NewMockTxVerifier()
	logger := &testutil.MockLogger{}

	service, err := validator.NewService(
		queryService,
		hashManager,
		blockHashClient,
		txHashClient,
		txVerifier,
		testutil.NewDefaultMockConfigProvider(),
		nil, // eventBus å¯é€‰
		logger,
	)
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}

	err = service.ValidateStructure(ctx, block)
	assert.NoError(t, err, "éªŒè¯é€»è¾‘åº”è¯¥æ­£ç¡®å·¥ä½œ")
}
