// Package block æä¾›åŒºå—ç®¡ç†çš„æ ¸å¿ƒå®ç°
//
// ğŸ“‹ **merkle.go - Merkleæ ‘ç›¸å…³å®ç°**
//
// æœ¬æ–‡ä»¶ä¸“é—¨å®ç°åŒºå—ä¸­äº¤æ˜“çš„Merkleæ ‘è®¡ç®—å’ŒéªŒè¯é€»è¾‘ã€‚
// ç¡®ä¿åˆ›å»ºåŒºå—å’ŒéªŒè¯åŒºå—æ—¶ä½¿ç”¨å®Œå…¨ç›¸åŒçš„Merkleæ ¹è®¡ç®—æ–¹æ³•ï¼Œé¿å…ä¸ä¸€è‡´é—®é¢˜ã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - æ ‡å‡†åŒ–Merkleæ ¹è®¡ç®—ï¼šä½¿ç”¨TransactionHashServiceClient + MerkleTreeManager
// - Merkleæ ¹éªŒè¯ï¼šé‡æ–°è®¡ç®—å¹¶æ¯”è¾ƒMerkleæ ¹
// - ç»Ÿä¸€æ•°æ®èŒƒå›´ï¼šåŸºäºäº¤æ˜“åˆ—è¡¨ï¼Œä¸åŒ…å«åŒºå—å¤´æŒ–çŸ¿æ•°æ®
// - ç¡®ä¿ä¸€è‡´æ€§ï¼šåˆ›å»ºå’ŒéªŒè¯ä½¿ç”¨ç›¸åŒçš„è®¡ç®—é€»è¾‘
//
// ğŸ—ï¸ **æ¶æ„ç‰¹ç‚¹**ï¼š
// - æ ‡å‡†åŒ–å“ˆå¸Œï¼šä½¿ç”¨TransactionHashServiceClientè®¡ç®—äº¤æ˜“å“ˆå¸Œ
// - å…¬å…±æ¥å£ï¼šä½¿ç”¨pkg/interfaces/infrastructure/crypto/merkleçš„MerkleTreeManager
// - æ•°æ®çº¯å‡€ï¼šä»…åŸºäºäº¤æ˜“æ•°æ®ï¼Œä¸æ¶‰åŠnonceç­‰æŒ–çŸ¿å­—æ®µ
// - é”™è¯¯è¯¦ç»†ï¼šæä¾›å®Œæ•´çš„é”™è¯¯ä¿¡æ¯å’Œè°ƒè¯•æ—¥å¿—
//
// è¯¦ç»†è®¾è®¡æ–‡æ¡£ï¼šinternal/core/blockchain/block/README.md
package block

import (
	"bytes"
	"context"
	"fmt"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ==================== Merkleæ ‘è®¡ç®—å’ŒéªŒè¯ ====================

// CalculateMerkleRoot è®¡ç®—äº¤æ˜“åˆ—è¡¨çš„Merkleæ ¹
//
// ğŸ¯ **æ ‡å‡†åŒ–Merkleæ ¹è®¡ç®— - å®ç°InternalBlockServiceæ¥å£**
//
// ä½¿ç”¨æ ‡å‡†çš„TransactionHashServiceå’ŒMerkleTreeManagerè®¡ç®—Merkleæ ¹ã€‚
// è¿™æ˜¯å†…éƒ¨æ¥å£çš„å®ç°æ–¹æ³•ï¼Œç¡®ä¿åˆ›å»ºå’ŒéªŒè¯ä½¿ç”¨ç›¸åŒçš„è®¡ç®—é€»è¾‘ã€‚
//
// ğŸ”„ **è®¡ç®—è¿‡ç¨‹**ï¼š
// 1. éªŒè¯äº¤æ˜“åˆ—è¡¨ä¸ä¸ºç©ºï¼ˆè‡³å°‘åŒ…å«Coinbaseäº¤æ˜“ï¼‰
// 2. ä½¿ç”¨TransactionHashServiceClientè®¡ç®—æ¯ä¸ªäº¤æ˜“çš„æ ‡å‡†å“ˆå¸Œ
// 3. ä½¿ç”¨MerkleTreeManageræ„å»ºMerkleæ ‘
// 4. è¿”å›32å­—èŠ‚çš„Merkleæ ¹å“ˆå¸Œ
//
// âš ï¸ **æ•°æ®èŒƒå›´è¯´æ˜**ï¼š
// - ä»…åŸºäºäº¤æ˜“æ•°æ®è¿›è¡Œè®¡ç®—
// - ä¸åŒ…å«åŒºå—å¤´ä¸­çš„nonceã€éš¾åº¦ç­‰æŒ–çŸ¿ç›¸å…³å­—æ®µ
// - ä½¿ç”¨ç¡®å®šæ€§çš„äº¤æ˜“å“ˆå¸Œç®—æ³•
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//	transactions: äº¤æ˜“åˆ—è¡¨ï¼ˆåŒ…å«Coinbaseäº¤æ˜“ï¼‰
//
// è¿”å›å€¼ï¼š
//
//	[]byte: 32å­—èŠ‚çš„Merkleæ ¹å“ˆå¸Œ
//	error: è®¡ç®—è¿‡ç¨‹ä¸­çš„é”™è¯¯
//
// ä½¿ç”¨åœºæ™¯ï¼š
//   - CreateMiningCandidate: åˆ›å»ºå€™é€‰åŒºå—æ—¶è®¡ç®—Merkleæ ¹
//   - ValidateBlock: éªŒè¯åŒºå—æ—¶é‡æ–°è®¡ç®—å¹¶æ¯”è¾ƒMerkleæ ¹
//
// ç¤ºä¾‹ï¼š
//
//	merkleRoot, err := blockService.CalculateMerkleRoot(ctx, transactions)
//	if err != nil {
//	  return fmt.Errorf("è®¡ç®—Merkleæ ¹å¤±è´¥: %w", err)
//	}
func (m *Manager) CalculateMerkleRoot(ctx context.Context, transactions []*transaction.Transaction) ([]byte, error) {
	if m.logger != nil {
		m.logger.Debugf("å¼€å§‹æ ‡å‡†åŒ–Merkleæ ¹è®¡ç®—ï¼Œäº¤æ˜“æ•°é‡: %d", len(transactions))
	}

	// 1. éªŒè¯è¾“å…¥å‚æ•°
	if len(transactions) == 0 {
		return nil, fmt.Errorf("äº¤æ˜“åˆ—è¡¨ä¸ºç©ºï¼Œæ— æ³•è®¡ç®—Merkleæ ¹")
	}

	// 2. å‡†å¤‡äº¤æ˜“å“ˆå¸Œæ•°æ®
	transactionHashes := make([][]byte, len(transactions))

	for i, tx := range transactions {
		// ä½¿ç”¨æ ‡å‡†çš„äº¤æ˜“å“ˆå¸ŒæœåŠ¡è®¡ç®—æ¯ä¸ªäº¤æ˜“çš„å“ˆå¸Œ
		hashReq := &transaction.ComputeHashRequest{
			Transaction:      tx,
			IncludeDebugInfo: false, // ç”Ÿäº§ç¯å¢ƒä¸éœ€è¦è°ƒè¯•ä¿¡æ¯
		}

		hashResp, err := m.txHashServiceClient.ComputeHash(ctx, hashReq)
		if err != nil {
			if m.logger != nil {
				m.logger.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥ï¼Œç´¢å¼•: %d, é”™è¯¯: %v", i, err)
			}
			return nil, fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥ (ç´¢å¼• %d): %w", i, err)
		}

		if !hashResp.IsValid {
			if m.logger != nil {
				m.logger.Errorf("äº¤æ˜“ç»“æ„æ— æ•ˆï¼Œç´¢å¼•: %d", i)
			}
			return nil, fmt.Errorf("äº¤æ˜“æ— æ•ˆ (ç´¢å¼• %d)", i)
		}

		// éªŒè¯å“ˆå¸Œé•¿åº¦
		if len(hashResp.Hash) != 32 {
			return nil, fmt.Errorf("äº¤æ˜“å“ˆå¸Œé•¿åº¦å¼‚å¸¸ (ç´¢å¼• %d)ï¼ŒæœŸæœ›32å­—èŠ‚ï¼Œå®é™…: %d",
				i, len(hashResp.Hash))
		}

		transactionHashes[i] = hashResp.Hash

		if m.logger != nil {
			m.logger.Debugf("äº¤æ˜“å“ˆå¸Œè®¡ç®—å®Œæˆï¼Œç´¢å¼•: %d, å“ˆå¸Œ: %x", i, hashResp.Hash)
		}
	}

	// 3. ä½¿ç”¨MerkleTreeManageræ„å»ºMerkleæ ‘
	merkleTree, err := m.merkleTreeManager.NewMerkleTree(transactionHashes)
	if err != nil {
		if m.logger != nil {
			m.logger.Errorf("æ„å»ºMerkleæ ‘å¤±è´¥: %v", err)
		}
		return nil, fmt.Errorf("æ„å»ºMerkleæ ‘å¤±è´¥: %w", err)
	}

	// 4. è·å–Merkleæ ¹
	merkleRoot := merkleTree.GetRoot()
	if len(merkleRoot) != 32 {
		return nil, fmt.Errorf("Merkleæ ¹é•¿åº¦å¼‚å¸¸ï¼ŒæœŸæœ›32å­—èŠ‚ï¼Œå®é™…: %d", len(merkleRoot))
	}

	if m.logger != nil {
		m.logger.Infof("âœ… æ ‡å‡†åŒ–Merkleæ ¹è®¡ç®—å®Œæˆ: %x", merkleRoot)
	}

	return merkleRoot, nil
}

// ValidateMerkleRoot éªŒè¯åŒºå—ä¸­çš„Merkleæ ¹
//
// ğŸ¯ **Merkleæ ¹éªŒè¯ - ç”¨äºåŒºå—éªŒè¯**
//
// é‡æ–°è®¡ç®—äº¤æ˜“åˆ—è¡¨çš„Merkleæ ¹ï¼Œå¹¶ä¸åŒºå—å¤´ä¸­çš„Merkleæ ¹è¿›è¡Œæ¯”è¾ƒã€‚
// ä½¿ç”¨ä¸CalculateMerkleRootå®Œå…¨ç›¸åŒçš„è®¡ç®—é€»è¾‘ï¼Œç¡®ä¿ä¸€è‡´æ€§ã€‚
//
// ğŸ”„ **éªŒè¯è¿‡ç¨‹**ï¼š
// 1. è°ƒç”¨CalculateMerkleRooté‡æ–°è®¡ç®—Merkleæ ¹
// 2. ä¸åŒºå—å¤´ä¸­å£°æ˜çš„Merkleæ ¹è¿›è¡Œå­—èŠ‚çº§æ¯”è¾ƒ
// 3. è¿”å›éªŒè¯ç»“æœå’Œè¯¦ç»†é”™è¯¯ä¿¡æ¯
//
// âš ï¸ **éªŒè¯åŸåˆ™**ï¼š
// - ä½¿ç”¨ç›¸åŒçš„æ ‡å‡†åŒ–è®¡ç®—æ–¹æ³•
// - å­—èŠ‚çº§ç²¾ç¡®æ¯”è¾ƒï¼Œä¸å…è®¸ä»»ä½•å·®å¼‚
// - æä¾›è¯¦ç»†çš„é”™è¯¯ä¿¡æ¯ç”¨äºè°ƒè¯•
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//	transactions: äº¤æ˜“åˆ—è¡¨ï¼ˆæ¥è‡ªåŒºå—ä½“ï¼‰
//	expectedMerkleRoot: æœŸæœ›çš„Merkleæ ¹ï¼ˆæ¥è‡ªåŒºå—å¤´ï¼‰
//
// è¿”å›å€¼ï¼š
//
//	bool: éªŒè¯ç»“æœï¼Œtrueè¡¨ç¤ºMerkleæ ¹æ­£ç¡®
//	error: éªŒè¯è¿‡ç¨‹ä¸­çš„é”™è¯¯
//
// ä½¿ç”¨åœºæ™¯ï¼š
//   - ValidateBlock: åŒºå—éªŒè¯è¿‡ç¨‹ä¸­çš„Merkleæ ¹æ ¡éªŒ
//   - è½»å®¢æˆ·ç«¯éªŒè¯: éªŒè¯åŒºå—å®Œæ•´æ€§è€Œä¸éœ€è¦å®Œæ•´åŒºå—æ•°æ®
//
// ç¤ºä¾‹ï¼š
//
//	valid, err := blockService.ValidateMerkleRoot(ctx, transactions, expectedRoot)
//	if err != nil {
//	  return fmt.Errorf("Merkleæ ¹éªŒè¯å¤±è´¥: %w", err)
//	}
//	if !valid {
//	  return fmt.Errorf("Merkleæ ¹ä¸åŒ¹é…")
//	}
func (m *Manager) ValidateMerkleRoot(ctx context.Context, transactions []*transaction.Transaction, expectedMerkleRoot []byte) (bool, error) {
	if m.logger != nil {
		m.logger.Debugf("å¼€å§‹éªŒè¯Merkleæ ¹ï¼ŒæœŸæœ›å€¼: %x", expectedMerkleRoot)
	}

	// 1. éªŒè¯è¾“å…¥å‚æ•°
	if len(expectedMerkleRoot) != 32 {
		return false, fmt.Errorf("æœŸæœ›çš„Merkleæ ¹é•¿åº¦å¿…é¡»ä¸º32å­—èŠ‚ï¼Œå®é™…: %d", len(expectedMerkleRoot))
	}

	// 2. é‡æ–°è®¡ç®—Merkleæ ¹ï¼ˆä½¿ç”¨ç›¸åŒçš„æ ‡å‡†åŒ–æ–¹æ³•ï¼‰
	calculatedRoot, err := m.CalculateMerkleRoot(ctx, transactions)
	if err != nil {
		if m.logger != nil {
			m.logger.Errorf("é‡æ–°è®¡ç®—Merkleæ ¹å¤±è´¥: %v", err)
		}
		return false, fmt.Errorf("é‡æ–°è®¡ç®—Merkleæ ¹å¤±è´¥: %w", err)
	}

	// 3. å­—èŠ‚çº§æ¯”è¾ƒ
	isValid := bytes.Equal(calculatedRoot, expectedMerkleRoot)

	if !isValid {
		if m.logger != nil {
			m.logger.Errorf("âŒ Merkleæ ¹éªŒè¯å¤±è´¥ï¼ŒæœŸæœ›: %x, è®¡ç®—å¾—å‡º: %x",
				expectedMerkleRoot, calculatedRoot)
		}
		return false, nil // è¿”å›falseä½†ä¸è¿”å›errorï¼Œè¿™æ˜¯æ­£å¸¸çš„éªŒè¯å¤±è´¥
	}

	if m.logger != nil {
		m.logger.Infof("âœ… Merkleæ ¹éªŒè¯é€šè¿‡: %x", calculatedRoot)
	}

	return true, nil
}
