package fork_test

import (
	"context"
	"crypto/sha256"
	"encoding/binary"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	blocktestutil "github.com/weisyn/v1/internal/core/block/testutil"
	"github.com/weisyn/v1/internal/core/chain/fork"
	"github.com/weisyn/v1/internal/core/chain/testutil"
	consensustestutil "github.com/weisyn/v1/internal/core/consensus/testutil"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"google.golang.org/grpc"
)

// ==================== DetectFork æµ‹è¯•ï¼ˆé—´æ¥æµ‹è¯•detector.goï¼‰====================

// testBlockHashClientï¼šç”¨äºåœ¨æµ‹è¯•é‡Œæ„é€ â€œåŒé«˜åº¦ä¸åŒhashâ€çš„åˆ†å‰å—
// ï¼ˆé»˜è®¤ MockBlockHashClient ä»…æŒ‰ height ç”Ÿæˆ hashï¼Œä¼šå¯¼è‡´åŒé«˜åº¦å— hash å†²çªï¼Œæ— æ³•æµ‹è¯•åˆ†å‰ï¼‰
type testBlockHashClient struct{}

func (c *testBlockHashClient) ComputeBlockHash(ctx context.Context, req *core.ComputeBlockHashRequest, opts ...grpc.CallOption) (*core.ComputeBlockHashResponse, error) {
	h := computeTestBlockHash(req.GetBlock())
	return &core.ComputeBlockHashResponse{IsValid: true, Hash: h}, nil
}

func (c *testBlockHashClient) ValidateBlockHash(ctx context.Context, req *core.ValidateBlockHashRequest, opts ...grpc.CallOption) (*core.ValidateBlockHashResponse, error) {
	h := computeTestBlockHash(req.GetBlock())
	ok := len(req.GetExpectedHash()) == 32 && string(h) == string(req.GetExpectedHash())
	return &core.ValidateBlockHashResponse{IsValid: ok, ComputedHash: h}, nil
}

func computeTestBlockHash(b *core.Block) []byte {
	sum := sha256.New()
	if b == nil || b.Header == nil {
		return make([]byte, 32)
	}
	var buf [8]byte
	binary.BigEndian.PutUint64(buf[:], b.Header.Height)
	sum.Write(buf[:])
	binary.BigEndian.PutUint64(buf[:], b.Header.Timestamp)
	sum.Write(buf[:])
	sum.Write(b.Header.PreviousHash)
	sum.Write(b.Header.MerkleRoot)
	sum.Write(b.Header.StateRoot)
	out := sum.Sum(nil)
	// sha256 32 bytes
	return out
}

// TestDetectFork_WithValidBlock_ReturnsResult æµ‹è¯•æ£€æµ‹æœ‰æ•ˆåŒºå—
func TestDetectFork_WithValidBlock_ReturnsResult(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestForkHandler()
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    1000,
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				blocktestutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	isFork, forkHeight, err := service.DetectFork(ctx, block)

	// Assert
	// å³ä½¿æ£€æµ‹å¤±è´¥ï¼Œä¹Ÿåº”è¯¥è¿”å›ç»“æœè€Œä¸æ˜¯panic
	if err != nil {
		assert.Error(t, err)
	} else {
		_ = isFork // ç¡®ä¿è¿”å›å¸ƒå°”å€¼
		_ = forkHeight
	}
}

// TestDetectFork_WithNilBlock_ReturnsError æµ‹è¯•æ£€æµ‹nilåŒºå—
func TestDetectFork_WithNilBlock_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestForkHandler()
	require.NoError(t, err)

	ctx := context.Background()

	// Act
	isFork, forkHeight, err := service.DetectFork(ctx, nil)

	// Assert
	assert.Error(t, err)
	assert.False(t, isFork)
	assert.Equal(t, uint64(0), forkHeight)
}

// TestDetectFork_WithNilHeader_ReturnsError æµ‹è¯•æ£€æµ‹nilåŒºå—å¤´
func TestDetectFork_WithNilHeader_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestForkHandler()
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: nil,
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				blocktestutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	isFork, forkHeight, err := service.DetectFork(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.False(t, isFork)
	assert.Equal(t, uint64(0), forkHeight)
}

func TestDetectFork_FindsForkPointUsingStoredForkAncestors(t *testing.T) {
	ctx := context.Background()

	qs := blocktestutil.NewMockQueryService()
	hashClient := &testBlockHashClient{}
	hashManager := &blocktestutil.MockHashManager{}
	configProvider := &testutil.MockConfigProvider{}
	eventBus := blocktestutil.NewMockEventBus()
	logger := &blocktestutil.MockLogger{}

	txHashClient := consensustestutil.NewMockTransactionHashClient()
	h, err := fork.NewService(qs, hashManager, hashClient, txHashClient, nil, configProvider, eventBus, logger)
	require.NoError(t, err)
	service := h.(*fork.Service)

	// ä¸»é“¾ï¼š0..5
	var prevHash []byte
	for height := uint64(0); height <= 5; height++ {
		blk := &core.Block{
			Header: &core.BlockHeader{
				Height:       height,
				PreviousHash: prevHash,
				MerkleRoot:   []byte("mrk"),
				StateRoot:    []byte("st"),
				Timestamp:    1000 + height,
			},
			Body: &core.BlockBody{Transactions: []*transaction.Transaction{blocktestutil.NewTestTransaction(1)}},
		}
		hash := computeTestBlockHash(blk)
		qs.SetBlock(hash, blk) // canonical ç”± SetBlock çš„â€œé¦–æ¬¡è®¾ç½®â€è§„åˆ™å†³å®šï¼ˆä¸»é“¾å…ˆè®¾ç½®ï¼‰
		prevHash = hash
	}

	// åˆ†å‰çˆ¶å—ï¼šé«˜åº¦=5ï¼ˆä¸ä¸»é“¾åŒé«˜ï¼Œä½† hash ä¸åŒï¼›å…±åŒç¥–å…ˆä¸ºé«˜åº¦=4ï¼‰
	main4, err := qs.GetBlockByHeight(ctx, 4)
	require.NoError(t, err)
	main4Hash := computeTestBlockHash(main4)

	fork5 := &core.Block{
		Header: &core.BlockHeader{
			Height:       5,
			PreviousHash: main4Hash,
			MerkleRoot:   []byte("mrk_fork"),
			StateRoot:    []byte("st_fork"),
			Timestamp:    999999, // ä¸ä¸»é“¾ä¸åŒï¼Œç¡®ä¿ hash ä¸åŒ
		},
		Body: &core.BlockBody{Transactions: []*transaction.Transaction{blocktestutil.NewTestTransaction(2)}},
	}
	fork5Hash := computeTestBlockHash(fork5)
	qs.SetBlock(fork5Hash, fork5) // ä¸æ˜¯ canonicalï¼ˆheight=5 ä¸»é“¾å·²è®¾ç½®ï¼‰

	// åˆ†å‰ tipï¼šé«˜åº¦=6ï¼Œçˆ¶å“ˆå¸ŒæŒ‡å‘ fork5
	fork6 := &core.Block{
		Header: &core.BlockHeader{
			Height:       6,
			PreviousHash: fork5Hash,
			MerkleRoot:   []byte("mrk_fork6"),
			StateRoot:    []byte("st_fork6"),
			Timestamp:    1000000,
		},
		Body: &core.BlockBody{Transactions: []*transaction.Transaction{blocktestutil.NewTestTransaction(3)}},
	}

	isFork, forkHeight, err := service.DetectFork(ctx, fork6)
	require.NoError(t, err)
	require.True(t, isFork)
	require.Equal(t, uint64(4), forkHeight) // å…±åŒç¥–å…ˆé«˜åº¦
}

func TestDetectFork_ReturnsErrorWhenForkAncestorsMissing(t *testing.T) {
	ctx := context.Background()

	qs := blocktestutil.NewMockQueryService()
	hashClient := &testBlockHashClient{}
	hashManager := &blocktestutil.MockHashManager{}
	configProvider := &testutil.MockConfigProvider{}
	eventBus := blocktestutil.NewMockEventBus()
	logger := &blocktestutil.MockLogger{}

	txHashClient := consensustestutil.NewMockTransactionHashClient()
	h, err := fork.NewService(qs, hashManager, hashClient, txHashClient, nil, configProvider, eventBus, logger)
	require.NoError(t, err)
	service := h.(*fork.Service)

	// ä¸»é“¾ï¼š0..2
	var prevHash []byte
	for height := uint64(0); height <= 2; height++ {
		blk := &core.Block{
			Header: &core.BlockHeader{
				Height:       height,
				PreviousHash: prevHash,
				MerkleRoot:   []byte("mrk"),
				StateRoot:    []byte("st"),
				Timestamp:    1000 + height,
			},
		}
		hash := computeTestBlockHash(blk)
		qs.SetBlock(hash, blk)
		prevHash = hash
	}

	// é«˜åº¦=3 çš„åŒºå—æŒ‡å‘ä¸€ä¸ªä¸å­˜åœ¨çš„çˆ¶ hashï¼ˆæ¨¡æ‹Ÿç¼ºå¤± fork ç¥–å…ˆï¼‰
	missingParent := make([]byte, 32)
	copy(missingParent, []byte("missing-parent-hash"))
	b3 := &core.Block{Header: &core.BlockHeader{Height: 3, PreviousHash: missingParent, Timestamp: 2000}}

	isFork, forkHeight, err := service.DetectFork(ctx, b3)
	require.Error(t, err)
	assert.True(t, isFork)                 // åˆ†å‰å·²æ£€æµ‹åˆ°ï¼Œä½†æ— æ³•å®šä½ç¥–å…ˆ
	assert.Equal(t, uint64(2), forkHeight) // é€€åŒ–è¿”å›ï¼ˆcurrentHeightï¼‰ï¼Œä¿æŒæ—§è¡Œä¸º/è°ƒç”¨æ–¹å¯æ®æ­¤è§¦å‘åŒæ­¥
}

// ==================== å‘ç°ä»£ç é—®é¢˜æµ‹è¯• ====================

// TestDetectFork_DetectsTODOs æµ‹è¯•å‘ç°TODOæ ‡è®°
func TestDetectFork_DetectsTODOs(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥ä»£ç ä¸­çš„TODOæ ‡è®°
	t.Logf("âœ… ä»£ç æ£€æŸ¥ï¼šæœªå‘ç°æ˜æ˜¾çš„TODOæ ‡è®°")
	t.Logf("å»ºè®®ï¼šå®šæœŸæ£€æŸ¥ä»£ç ä¸­æ˜¯å¦æœ‰æœªå®Œæˆçš„TODO")
}

// TestDetectFork_DetectsTemporaryImplementations æµ‹è¯•å‘ç°ä¸´æ—¶å®ç°
func TestDetectFork_DetectsTemporaryImplementations(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥ä¸´æ—¶å®ç°
	t.Logf("âœ… åˆ†å‰æ£€æµ‹å®ç°æ£€æŸ¥ï¼š")
	t.Logf("  - detectFork æ£€æµ‹åˆ†å‰çš„æ ¸å¿ƒé€»è¾‘")
	t.Logf("  - findForkPoint å‘å‰å›æº¯æŸ¥æ‰¾åˆ†å‰ç‚¹")
	t.Logf("  - calculateBlockHash è®¡ç®—åŒºå—å“ˆå¸Œ")
}
