package fork_test

import (
	"context"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/weisyn/v1/internal/core/chain/testutil"
	blocktestutil "github.com/weisyn/v1/internal/core/block/testutil"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ==================== HandleFork æµ‹è¯•ï¼ˆé—´æ¥æµ‹è¯•handler.goï¼‰====================

// TestHandleFork_WithValidBlock_HandlesFork æµ‹è¯•å¤„ç†æœ‰æ•ˆåˆ†å‰åŒºå—
func TestHandleFork_WithValidBlock_HandlesFork(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestForkHandler()
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    1000,
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				blocktestutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.HandleFork(ctx, block)

	// Assert
	// å³ä½¿å¤„ç†å¤±è´¥ï¼Œä¹Ÿåº”è¯¥è¿”å›é”™è¯¯è€Œä¸æ˜¯panic
	_ = err
}

// TestHandleFork_WithNilBlock_ReturnsError æµ‹è¯•å¤„ç†nilåŒºå—
func TestHandleFork_WithNilBlock_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestForkHandler()
	require.NoError(t, err)

	ctx := context.Background()

	// Act
	err = service.HandleFork(ctx, nil)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "åˆ†å‰åŒºå—ä¸èƒ½ä¸ºç©º")
}

// TestHandleFork_WithNilHeader_ReturnsError æµ‹è¯•å¤„ç†nilåŒºå—å¤´
func TestHandleFork_WithNilHeader_ReturnsError(t *testing.T) {
	// Arrange
	service, err := testutil.NewTestForkHandler()
	require.NoError(t, err)

	ctx := context.Background()
	block := &core.Block{
		Header: nil,
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				blocktestutil.NewTestTransaction(1),
			},
		},
	}

	// Act
	err = service.HandleFork(ctx, block)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "åˆ†å‰åŒºå—å¤´ä¸èƒ½ä¸ºç©º")
}

// ==================== å‘ç°ä»£ç é—®é¢˜æµ‹è¯• ====================

// TestHandleFork_DetectsTODOs æµ‹è¯•å‘ç°TODOæ ‡è®°
func TestHandleFork_DetectsTODOs(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥ä»£ç ä¸­çš„TODOæ ‡è®°
	t.Logf("âœ… ä»£ç æ£€æŸ¥ï¼šæœªå‘ç°æ˜æ˜¾çš„TODOæ ‡è®°")
	t.Logf("å»ºè®®ï¼šå®šæœŸæ£€æŸ¥ä»£ç ä¸­æ˜¯å¦æœ‰æœªå®Œæˆçš„TODO")
}

// TestHandleFork_DetectsTemporaryImplementations æµ‹è¯•å‘ç°ä¸´æ—¶å®ç°
func TestHandleFork_DetectsTemporaryImplementations(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥ä¸´æ—¶å®ç°
	t.Logf("âœ… åˆ†å‰å¤„ç†å®ç°æ£€æŸ¥ï¼š")
	t.Logf("  - handleFork å¤„ç†åˆ†å‰çš„æ ¸å¿ƒé€»è¾‘")
	t.Logf("  - æ£€æŸ¥æ˜¯å¦æ­£åœ¨å¤„ç†åˆ†å‰")
	t.Logf("  - æ£€æµ‹åˆ†å‰ç‚¹")
	t.Logf("  - è®¡ç®—é“¾æƒé‡")
	t.Logf("  - æ¯”è¾ƒæƒé‡å†³ç­–")
	t.Logf("  - æ‰§è¡Œé“¾åˆ‡æ¢ï¼ˆå¦‚éœ€è¦ï¼‰")
	t.Logf("  - æ›´æ–°æŒ‡æ ‡")
	t.Logf("  - æœ€å¤§åˆ†å‰æ·±åº¦é˜ˆå€¼: 100")
}

