// Package testutil æä¾› Mempool æ¨¡å—æµ‹è¯•çš„è¾…åŠ©å·¥å…·
//
// ğŸ§ª **æµ‹è¯•è¾…åŠ©å·¥å…·åŒ…**
//
// æœ¬åŒ…æä¾›æµ‹è¯•æ‰€éœ€çš„ Mock å¯¹è±¡ã€æµ‹è¯•æ•°æ®å’Œè¾…åŠ©å‡½æ•°ï¼Œç”¨äºç®€åŒ–æµ‹è¯•ä»£ç ç¼–å†™ã€‚
// éµå¾ª docs/system/standards/principles/testing-standards.md è§„èŒƒã€‚
package testutil

import (
	"context"
	"errors"
	"sync"
	"time"

	"go.uber.org/zap"
	"google.golang.org/grpc"

	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	complianceIfaces "github.com/weisyn/v1/pkg/interfaces/compliance"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/event"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/types"
)

// ==================== Mock å¯¹è±¡ ====================

// MockLogger ç»Ÿä¸€çš„æ—¥å¿—Mockå®ç°
//
// âœ… **è®¾è®¡åŸåˆ™**ï¼šæœ€å°å®ç°ï¼Œæ‰€æœ‰æ–¹æ³•è¿”å›ç©ºå€¼ï¼Œä¸è®°å½•æ—¥å¿—
// ğŸ“‹ **ä½¿ç”¨åœºæ™¯**ï¼š80%çš„æµ‹è¯•ç”¨ä¾‹ï¼Œä¸éœ€è¦éªŒè¯æ—¥å¿—è°ƒç”¨
type MockLogger struct{}

func (m *MockLogger) Debug(msg string)                          {}
func (m *MockLogger) Debugf(format string, args ...interface{}) {}
func (m *MockLogger) Info(msg string)                           {}
func (m *MockLogger) Infof(format string, args ...interface{})  {}
func (m *MockLogger) Warn(msg string)                           {}
func (m *MockLogger) Warnf(format string, args ...interface{})  {}
func (m *MockLogger) Error(msg string)                          {}
func (m *MockLogger) Errorf(format string, args ...interface{}) {}
func (m *MockLogger) Fatal(msg string)                          {}
func (m *MockLogger) Fatalf(format string, args ...interface{}) {}
func (m *MockLogger) With(args ...interface{}) log.Logger       { return m }
func (m *MockLogger) Sync() error                               { return nil }
func (m *MockLogger) GetZapLogger() *zap.Logger                 { return zap.NewNop() }

// MockEventBus ç»Ÿä¸€çš„äº‹ä»¶æ€»çº¿Mockå®ç°
//
// âœ… **è®¾è®¡åŸåˆ™**ï¼šæœ€å°å®ç°ï¼Œä¸å®é™…å‘å¸ƒäº‹ä»¶
// ğŸ“‹ **ä½¿ç”¨åœºæ™¯**ï¼š80%çš„æµ‹è¯•ç”¨ä¾‹ï¼Œä¸éœ€è¦éªŒè¯äº‹ä»¶å‘å¸ƒ
type MockEventBus struct {
	mu     sync.RWMutex
	events []event.Event
}

// NewMockEventBus åˆ›å»ºæ–°çš„Mockäº‹ä»¶æ€»çº¿
func NewMockEventBus() *MockEventBus {
	return &MockEventBus{
		events: make([]event.Event, 0),
	}
}

// Subscribe è®¢é˜…äº‹ä»¶
func (m *MockEventBus) Subscribe(eventType event.EventType, handler interface{}) error {
	return nil
}

// SubscribeAsync å¼‚æ­¥è®¢é˜…äº‹ä»¶
func (m *MockEventBus) SubscribeAsync(eventType event.EventType, handler interface{}, transactional bool) error {
	return nil
}

// SubscribeOnce ä¸€æ¬¡æ€§è®¢é˜…äº‹ä»¶
func (m *MockEventBus) SubscribeOnce(eventType event.EventType, handler interface{}) error {
	return nil
}

// SubscribeOnceAsync å¼‚æ­¥ä¸€æ¬¡æ€§è®¢é˜…äº‹ä»¶
func (m *MockEventBus) SubscribeOnceAsync(eventType event.EventType, handler interface{}, transactional bool) error {
	return nil
}

// Publish å‘å¸ƒäº‹ä»¶
func (m *MockEventBus) Publish(eventType event.EventType, args ...interface{}) {
	m.mu.Lock()
	defer m.mu.Unlock()
	// Mockå®ç°ï¼šä¸å®é™…å‘å¸ƒäº‹ä»¶
}

// PublishEvent å‘å¸ƒEventæ¥å£ç±»å‹äº‹ä»¶
func (m *MockEventBus) PublishEvent(evt event.Event) {
	m.mu.Lock()
	defer m.mu.Unlock()
	m.events = append(m.events, evt)
}

// Unsubscribe å–æ¶ˆè®¢é˜…
func (m *MockEventBus) Unsubscribe(eventType event.EventType, handler interface{}) error {
	return nil
}

// WaitAsync ç­‰å¾…æ‰€æœ‰å¼‚æ­¥å¤„ç†å®Œæˆ
func (m *MockEventBus) WaitAsync() {}

// HasCallback æ£€æŸ¥æ˜¯å¦æœ‰å›è°ƒå‡½æ•°
func (m *MockEventBus) HasCallback(eventType event.EventType) bool {
	return false
}

// GetEventHistory è·å–æŒ‡å®šäº‹ä»¶ç±»å‹çš„å†å²è®°å½•
func (m *MockEventBus) GetEventHistory(eventType event.EventType) []interface{} {
	return nil
}

// PublishWESEvent å‘å¸ƒWESäº‹ä»¶
func (m *MockEventBus) PublishWESEvent(event *types.WESEvent) error {
	return nil
}

// SubscribeWithFilter å¸¦è¿‡æ»¤å™¨çš„è®¢é˜…
func (m *MockEventBus) SubscribeWithFilter(eventType event.EventType, filter event.EventFilter, handler event.EventHandler) (types.SubscriptionID, error) {
	return "", nil
}

// SubscribeWESEvents è®¢é˜…WESæ¶ˆæ¯äº‹ä»¶
func (m *MockEventBus) SubscribeWESEvents(protocols []event.ProtocolType, handler event.WESEventHandler) (types.SubscriptionID, error) {
	return "", nil
}

// UnsubscribeByID é€šè¿‡è®¢é˜…IDå–æ¶ˆè®¢é˜…
func (m *MockEventBus) UnsubscribeByID(id types.SubscriptionID) error {
	return nil
}

// EnableEventHistory å¯ç”¨äº‹ä»¶å†å²è®°å½•
func (m *MockEventBus) EnableEventHistory(eventType event.EventType, maxSize int) error {
	return nil
}

// DisableEventHistory ç¦ç”¨äº‹ä»¶å†å²è®°å½•
func (m *MockEventBus) DisableEventHistory(eventType event.EventType) error {
	return nil
}

// GetActiveSubscriptions è·å–æ´»è·ƒè®¢é˜…åˆ—è¡¨
func (m *MockEventBus) GetActiveSubscriptions() ([]*types.SubscriptionInfo, error) {
	return nil, nil
}

// UpdateConfig æ›´æ–°äº‹ä»¶æ€»çº¿é…ç½®
func (m *MockEventBus) UpdateConfig(config *types.EventBusConfig) error {
	return nil
}

// GetConfig è·å–å½“å‰é…ç½®
func (m *MockEventBus) GetConfig() (*types.EventBusConfig, error) {
	return nil, nil
}

// RegisterEventInterceptor æ³¨å†Œäº‹ä»¶æ‹¦æˆªå™¨
func (m *MockEventBus) RegisterEventInterceptor(interceptor event.EventInterceptor) error {
	return nil
}

// UnregisterEventInterceptor æ³¨é”€äº‹ä»¶æ‹¦æˆªå™¨
func (m *MockEventBus) UnregisterEventInterceptor(interceptorID string) error {
	return nil
}

// GetEvents è·å–æ‰€æœ‰å‘å¸ƒçš„äº‹ä»¶ï¼ˆç”¨äºæµ‹è¯•ï¼‰
func (m *MockEventBus) GetEvents() []event.Event {
	m.mu.RLock()
	defer m.mu.RUnlock()
	return append([]event.Event{}, m.events...)
}

// ClearEvents æ¸…ç©ºäº‹ä»¶ï¼ˆç”¨äºæµ‹è¯•ï¼‰
func (m *MockEventBus) ClearEvents() {
	m.mu.Lock()
	defer m.mu.Unlock()
	m.events = m.events[:0]
}

// MockMemoryStore ç»Ÿä¸€çš„å†…å­˜å­˜å‚¨Mockå®ç°
//
// âœ… **è®¾è®¡åŸåˆ™**ï¼šå†…å­˜å­˜å‚¨ï¼Œæ”¯æŒåŸºæœ¬çš„é”®å€¼æ“ä½œ
// ğŸ“‹ **ä½¿ç”¨åœºæ™¯**ï¼šMempoolæµ‹è¯•ï¼Œéœ€è¦æ¨¡æ‹Ÿå†…å­˜å­˜å‚¨
type MockMemoryStore struct {
	mu    sync.RWMutex
	store map[string][]byte
	ttl   map[string]time.Time
}

// NewMockMemoryStore åˆ›å»ºæ–°çš„Mockå†…å­˜å­˜å‚¨
func NewMockMemoryStore() *MockMemoryStore {
	return &MockMemoryStore{
		store: make(map[string][]byte),
		ttl:   make(map[string]time.Time),
	}
}

// Get è·å–å€¼
func (m *MockMemoryStore) Get(ctx context.Context, key string) ([]byte, bool, error) {
	m.mu.RLock()
	defer m.mu.RUnlock()
	value, exists := m.store[key]
	if !exists {
		return nil, false, nil
	}
	// æ£€æŸ¥TTL
	if expireTime, hasTTL := m.ttl[key]; hasTTL {
		if time.Now().After(expireTime) {
			delete(m.store, key)
			delete(m.ttl, key)
			return nil, false, nil
		}
	}
	return value, true, nil
}

// Set è®¾ç½®é”®å€¼
func (m *MockMemoryStore) Set(ctx context.Context, key string, value []byte, ttl time.Duration) error {
	m.mu.Lock()
	defer m.mu.Unlock()
	m.store[key] = value
	if ttl > 0 {
		m.ttl[key] = time.Now().Add(ttl)
	} else {
		delete(m.ttl, key)
	}
	return nil
}

// Delete åˆ é™¤é”®
func (m *MockMemoryStore) Delete(ctx context.Context, key string) error {
	m.mu.Lock()
	defer m.mu.Unlock()
	delete(m.store, key)
	delete(m.ttl, key)
	return nil
}

// Exists æ£€æŸ¥é”®æ˜¯å¦å­˜åœ¨
func (m *MockMemoryStore) Exists(ctx context.Context, key string) (bool, error) {
	m.mu.RLock()
	defer m.mu.RUnlock()
	_, exists := m.store[key]
	if exists {
		// æ£€æŸ¥TTL
		if expireTime, hasTTL := m.ttl[key]; hasTTL {
			if time.Now().After(expireTime) {
				return false, nil
			}
		}
	}
	return exists, nil
}

// GetMany æ‰¹é‡è·å–
func (m *MockMemoryStore) GetMany(ctx context.Context, keys []string) (map[string][]byte, error) {
	m.mu.RLock()
	defer m.mu.RUnlock()
	result := make(map[string][]byte)
	for _, key := range keys {
		if value, exists := m.store[key]; exists {
			// æ£€æŸ¥TTL
			if expireTime, hasTTL := m.ttl[key]; hasTTL {
				if time.Now().After(expireTime) {
					continue
				}
			}
			result[key] = value
		}
	}
	return result, nil
}

// SetMany æ‰¹é‡è®¾ç½®
func (m *MockMemoryStore) SetMany(ctx context.Context, items map[string][]byte, ttl time.Duration) error {
	m.mu.Lock()
	defer m.mu.Unlock()
	for key, value := range items {
		m.store[key] = value
		if ttl > 0 {
			m.ttl[key] = time.Now().Add(ttl)
		} else {
			delete(m.ttl, key)
		}
	}
	return nil
}

// DeleteMany æ‰¹é‡åˆ é™¤
func (m *MockMemoryStore) DeleteMany(ctx context.Context, keys []string) error {
	m.mu.Lock()
	defer m.mu.Unlock()
	for _, key := range keys {
		delete(m.store, key)
		delete(m.ttl, key)
	}
	return nil
}

// Clear æ¸…ç©ºæ‰€æœ‰æ•°æ®
func (m *MockMemoryStore) Clear(ctx context.Context) error {
	m.mu.Lock()
	defer m.mu.Unlock()
	m.store = make(map[string][]byte)
	m.ttl = make(map[string]time.Time)
	return nil
}

// DeleteByPattern æ ¹æ®æ¨¡å¼åˆ é™¤
func (m *MockMemoryStore) DeleteByPattern(ctx context.Context, pattern string) (int64, error) {
	// Mockå®ç°ï¼šç®€å•å®ç°ï¼Œä¸æ”¯æŒé€šé…ç¬¦
	return 0, nil
}

// GetKeys è·å–åŒ¹é…æ¨¡å¼çš„æ‰€æœ‰é”®
func (m *MockMemoryStore) GetKeys(ctx context.Context, pattern string) ([]string, error) {
	m.mu.RLock()
	defer m.mu.RUnlock()
	keys := make([]string, 0, len(m.store))
	for key := range m.store {
		keys = append(keys, key)
	}
	return keys, nil
}

// GetTTL è·å–é”®çš„å‰©ä½™ç”Ÿå­˜æ—¶é—´
func (m *MockMemoryStore) GetTTL(ctx context.Context, key string) (time.Duration, error) {
	m.mu.RLock()
	defer m.mu.RUnlock()
	expireTime, exists := m.ttl[key]
	if !exists {
		return 0, errors.New("é”®ä¸å­˜åœ¨æˆ–æ²¡æœ‰TTL")
	}
	remaining := time.Until(expireTime)
	if remaining < 0 {
		return 0, errors.New("é”®å·²è¿‡æœŸ")
	}
	return remaining, nil
}

// UpdateTTL æ›´æ–°é”®çš„è¿‡æœŸæ—¶é—´
func (m *MockMemoryStore) UpdateTTL(ctx context.Context, key string, ttl time.Duration) error {
	m.mu.Lock()
	defer m.mu.Unlock()
	if _, exists := m.store[key]; !exists {
		return errors.New("é”®ä¸å­˜åœ¨")
	}
	if ttl > 0 {
		m.ttl[key] = time.Now().Add(ttl)
	} else {
		delete(m.ttl, key)
	}
	return nil
}

// Count è·å–å½“å‰ç¼“å­˜ä¸­çš„é”®æ•°é‡
func (m *MockMemoryStore) Count(ctx context.Context) (int64, error) {
	m.mu.RLock()
	defer m.mu.RUnlock()
	return int64(len(m.store)), nil
}

// MockTransactionHashService ç»Ÿä¸€çš„äº¤æ˜“å“ˆå¸ŒæœåŠ¡Mockå®ç°
//
// âœ… **è®¾è®¡åŸåˆ™**ï¼šè¿”å›å›ºå®šå“ˆå¸Œå€¼
// ğŸ“‹ **ä½¿ç”¨åœºæ™¯**ï¼šMempoolæµ‹è¯•ï¼Œéœ€è¦æ¨¡æ‹Ÿäº¤æ˜“å“ˆå¸Œè®¡ç®—
type MockTransactionHashService struct{}

// ComputeHash è®¡ç®—äº¤æ˜“å“ˆå¸Œ
func (m *MockTransactionHashService) ComputeHash(ctx context.Context, in *transaction.ComputeHashRequest, opts ...grpc.CallOption) (*transaction.ComputeHashResponse, error) {
	// Mockå®ç°ï¼šåŸºäºäº¤æ˜“å†…å®¹ç”Ÿæˆ32å­—èŠ‚å“ˆå¸Œ
	hash := make([]byte, 32)
	if in != nil && in.Transaction != nil {
		// ä½¿ç”¨äº¤æ˜“çš„Nonceå’ŒCreationTimestampç”Ÿæˆå“ˆå¸Œ
		nonce := in.Transaction.Nonce
		timestamp := in.Transaction.CreationTimestamp
		for i := 0; i < 32; i++ {
			if i < 8 {
				hash[i] = byte(nonce >> (i * 8))
			} else if i < 16 {
				hash[i] = byte(timestamp >> ((i - 8) * 8))
			} else {
				hash[i] = byte(i)
			}
		}
	} else {
		// é»˜è®¤å“ˆå¸Œå€¼
		copy(hash, []byte("mock_tx_hash_32_bytes_12345678"))
	}
	return &transaction.ComputeHashResponse{
		Hash:    hash,
		IsValid: true,
	}, nil
}

// ValidateHash éªŒè¯äº¤æ˜“å“ˆå¸Œ
func (m *MockTransactionHashService) ValidateHash(ctx context.Context, in *transaction.ValidateHashRequest, opts ...grpc.CallOption) (*transaction.ValidateHashResponse, error) {
	// Mockå®ç°ï¼šæ€»æ˜¯è¿”å›true
	return &transaction.ValidateHashResponse{
		IsValid: true,
	}, nil
}

// ComputeSignatureHash è®¡ç®—ç­¾åå“ˆå¸Œ
func (m *MockTransactionHashService) ComputeSignatureHash(ctx context.Context, in *transaction.ComputeSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ComputeSignatureHashResponse, error) {
	// Mockå®ç°ï¼šè¿”å›å›ºå®šå“ˆå¸Œå€¼
	return &transaction.ComputeSignatureHashResponse{
		Hash:    []byte("mock_sig_hash_32_bytes_12345678"),
		IsValid: true,
	}, nil
}

// ValidateSignatureHash éªŒè¯ç­¾åå“ˆå¸Œ
func (m *MockTransactionHashService) ValidateSignatureHash(ctx context.Context, in *transaction.ValidateSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ValidateSignatureHashResponse, error) {
	// Mockå®ç°ï¼šæ€»æ˜¯è¿”å›true
	return &transaction.ValidateSignatureHashResponse{
		IsValid: true,
	}, nil
}

// MockBlockHashService ç»Ÿä¸€çš„åŒºå—å“ˆå¸ŒæœåŠ¡Mockå®ç°
//
// âœ… **è®¾è®¡åŸåˆ™**ï¼šå¯é‡å¤ã€ä½æˆæœ¬ã€ä¸”é¿å…æµ‹è¯•å†…ç¢°æ’
// ğŸ“‹ **ä½¿ç”¨åœºæ™¯**ï¼šMempoolæµ‹è¯•ï¼Œéœ€è¦æ¨¡æ‹ŸåŒºå—å“ˆå¸Œè®¡ç®—
type MockBlockHashService struct {
}

// ComputeBlockHash è®¡ç®—åŒºå—å“ˆå¸Œ
func (m *MockBlockHashService) ComputeBlockHash(ctx context.Context, in *core.ComputeBlockHashRequest, opts ...grpc.CallOption) (*core.ComputeBlockHashResponse, error) {
	// Mockå®ç°ï¼šæ ¹æ®åŒºå—é«˜åº¦ç”Ÿæˆä¸åŒçš„32å­—èŠ‚å“ˆå¸Œå€¼
	hash := make([]byte, 32)
	if in.Block != nil && in.Block.Header != nil {
		// ä½¿ç”¨åŒºå—é«˜åº¦å’Œæ—¶é—´æˆ³ç”Ÿæˆç¡®å®šæ€§å“ˆå¸Œï¼ˆç›¸åŒåŒºå—é‡å¤è®¡ç®—åº”å¾—åˆ°ç›¸åŒç»“æœï¼‰
		height := in.Block.Header.Height
		timestamp := in.Block.Header.Timestamp
		// å¡«å……å“ˆå¸Œï¼šå‰8å­—èŠ‚ä¸ºé«˜åº¦ï¼Œæ¥ä¸‹æ¥8å­—èŠ‚ä¸ºæ—¶é—´æˆ³ï¼Œå‰©ä½™16å­—èŠ‚ä¸ºå›ºå®šå€¼
		for i := 0; i < 8; i++ {
			hash[i] = byte(height >> (i * 8))
		}
		for i := 0; i < 8; i++ {
			hash[8+i] = byte(timestamp >> (i * 8))
		}
		copy(hash[16:], []byte("mock_hash_16bytes"))
	} else {
		// å¦‚æœåŒºå—ä¸ºnilï¼Œè¿”å›å›ºå®šå“ˆå¸Œ
		copy(hash, []byte("mock_block_hash_32_bytes_12345678"))
	}
	return &core.ComputeBlockHashResponse{
		Hash:    hash,
		IsValid: true, // å¿…é¡»è®¾ç½®ä¸ºtrueï¼Œå¦åˆ™ä¼šè¿”å›"åŒºå—ç»“æ„æ— æ•ˆ"é”™è¯¯
	}, nil
}

// ValidateBlockHash éªŒè¯åŒºå—å“ˆå¸Œ
func (m *MockBlockHashService) ValidateBlockHash(ctx context.Context, in *core.ValidateBlockHashRequest, opts ...grpc.CallOption) (*core.ValidateBlockHashResponse, error) {
	// Mockå®ç°ï¼šæ€»æ˜¯è¿”å›true
	return &core.ValidateBlockHashResponse{
		IsValid: true,
	}, nil
}

// MockCompliancePolicy ç»Ÿä¸€çš„åˆè§„ç­–ç•¥Mockå®ç°
//
// âœ… **è®¾è®¡åŸåˆ™**ï¼šå¯é…ç½®çš„Mockï¼Œæ”¯æŒå…è®¸/æ‹’ç»å†³ç­–
// ğŸ“‹ **ä½¿ç”¨åœºæ™¯**ï¼šMempoolæµ‹è¯•ï¼Œéœ€è¦æ¨¡æ‹Ÿåˆè§„æ£€æŸ¥
type MockCompliancePolicy struct {
	shouldAllow bool
	decision    *complianceIfaces.Decision
	err         error
}

// NewMockCompliancePolicy åˆ›å»ºæ–°çš„Mockåˆè§„ç­–ç•¥
func NewMockCompliancePolicy(shouldAllow bool) *MockCompliancePolicy {
	return &MockCompliancePolicy{
		shouldAllow: shouldAllow,
		decision: &complianceIfaces.Decision{
			Allowed:   shouldAllow,
			Reason:    "",
			Source:    complianceIfaces.DecisionSourceConfig, // ä½¿ç”¨Configä½œä¸ºMockæº
			Timestamp: time.Now(),
		},
	}
}

// NewMockCompliancePolicyWithDecision åˆ›å»ºå¸¦è‡ªå®šä¹‰å†³ç­–çš„Mockåˆè§„ç­–ç•¥
func NewMockCompliancePolicyWithDecision(decision *complianceIfaces.Decision) *MockCompliancePolicy {
	return &MockCompliancePolicy{
		shouldAllow: decision.Allowed,
		decision:    decision,
	}
}

// NewMockCompliancePolicyWithError åˆ›å»ºè¿”å›é”™è¯¯çš„Mockåˆè§„ç­–ç•¥
func NewMockCompliancePolicyWithError(err error) *MockCompliancePolicy {
	return &MockCompliancePolicy{
		err: err,
	}
}

// CheckTransaction æ£€æŸ¥äº¤æ˜“çš„åˆè§„æ€§
func (m *MockCompliancePolicy) CheckTransaction(ctx context.Context, tx *transaction.Transaction, source *complianceIfaces.TransactionSource) (*complianceIfaces.Decision, error) {
	if m.err != nil {
		return nil, m.err
	}
	return m.decision, nil
}

// CheckOperation æ£€æŸ¥ç‰¹å®šæ“ä½œçš„åˆè§„æ€§
func (m *MockCompliancePolicy) CheckOperation(ctx context.Context, operation string, address string, source *complianceIfaces.TransactionSource) (*complianceIfaces.Decision, error) {
	if m.err != nil {
		return nil, m.err
	}
	return m.decision, nil
}
